ci: add Syft installation and SBOM generation steps to CI workflow
Signed-off-by: Tsung-Han Ho (Miles Ho) <mystes3016@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,14 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Install Syft
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+        
+    - name: Generate SBOM
+      run: |
+        syft . -o table=sbom-table.txt
+
     - name: Install Grype
       run: |
         curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
