--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,6 +38,16 @@ linters:
     - unused
     - whitespace
   settings:
+    staticcheck:
+      checks:
+        - all
+        - -QF1008
+        - -SA1019
+        - -ST1000
+        - -ST1003
+        - -ST1016
+        - -ST1020
+        - -ST1021
     depguard:
       rules:
         main:
@@ -51,7 +61,7 @@ linters:
     goconst:
       min-len: 5
       min-occurrences: 3
-      ignore-strings: get|post|put|delete|patch|options|head
+      ignore-string-values: get|post|put|delete|patch|options|head
     gocritic:
       disabled-checks:
         - regexpMust
